<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/container">

    <LinearLayout
        android:id="@+id/layoutForgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/textViewBlackHuge"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:visibility="gone" />

        <EditText
            android:id="@+id/tvEmail"
            style="@style/login_edittext_style"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/bSignin"
            style="@style/login_button_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="16dp"
            android:onClick="onForgotClick"
            android:text="@string/forgot_password_" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutChange"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            style="@style/textViewBlackHuge"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:text="@string/change_password" />

        <EditText
            android:id="@+id/tvOtp"
            style="@style/login_edittext_style"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_otp"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/ic_otp"
            android:layout_marginRight="30dp"
            android:inputType="text"
            android:maxLength="5" />

        <EditText
            android:id="@+id/tvPassword"
            style="@style/login_edittext_style"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/tvConfirmPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            style="@style/login_edittext_style"
            android:drawableLeft="@drawable/ic_password"
            android:layout_marginTop="8dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bChange"
            style="@style/login_button_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="onChangeClick"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>
