<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/container">

    <TextView
        android:id="@+id/tvName"
        style="@style/textViewBlackLarge"
        android:layout_below="@+id/tvInterest"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvMessage"
        style="@style/textViewGreyNormal"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="5dp"
        android:text="@string/message" />

    <com.github.curioustechizen.ago.RelativeTimeTextView
        android:id="@+id/tvDate"
        style="@style/textViewGreyNormal"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvMessage"
        android:layout_marginTop="2dp"
        android:gravity="right"
        android:hint="@string/user_name"
        android:singleLine="true"
        android:text="@string/date"
        android:textSize="8sp" />

    <View
        style="@style/line_green"
        android:layout_below="@+id/tvDate"
        android:layout_marginTop="5dp" />

</RelativeLayout>