<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/textViewBlackHuge"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/change_password" />

    <EditText
        android:id="@+id/tvEmail"
        style="@style/login_edittext_style"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tvCurrentPassword"
        style="@style/login_edittext_style"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/current_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/tvNewPassword"
        style="@style/login_edittext_style"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bSignin"
        style="@style/login_button_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="onChangePasswordClick"
        android:text="@string/change_password" />

</LinearLayout>
