<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:background="@color/off_white"
    android:orientation="vertical">

    <Button
        android:id="@+id/idName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/name" />

    <Button
        android:id="@+id/idDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/distance" />

    <Button
        android:id="@+id/idCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="left|center_vertical"
        android:padding="5dp"
        android:text="@string/credit" />

</LinearLayout>